# claude-max-api-proxy-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  main.rs  routes.rs  server.rs  session.rs  subprocess.rs
src/adapter/: anthropic_to_cli.rs  cli_to_anthropic.rs  cli_to_openai.rs  mod.rs  openai_to_cli.rs
src/types/: anthropic.rs  claude_cli.rs  mod.rs  openai.rs
