[package]
name = "claude-max-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "claude-max-api"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
tokio-stream = "0.1"
http = "1"

[profile.release]
strip = true
lto = true
